--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "swiper": "^8.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -17,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "watch":"npx tailwindcss -i ./src/assets/css/style.css -o ./src/assets/css/output.css --watch"
+    "watch": "npx tailwindcss -i ./src/assets/css/style.css -o ./src/assets/css/output.css --watch"
   },
   "eslintConfig": {
     "extends": [
